4.0.0a1
+ netstandard2.0 and net46 are the only supported frameworks now
+ Add support for IWrapsElement members creation (constructor with IWebElement parameter or WrappedElement setter required)
+ Exceptions from proxied elements are not wrapped in TargetInvocationException anymore

3.12.1
+ Add constructor with parameters to FindsByAttibute 

3.12.0
+ Ability to create custom FindsBy attributes (by inheriting from AbsractFindsByAttribute)

3.1.2
+ .NET Standard 2.0 support