@@ -1,8 +1,0 @@
-﻿using OpenQA.Selenium;
-
-namespace SeleniumExtras
-{
-    internal interface IProxiedWebElement : IWebElement, IWrapsElement, ILocatable
-    {
-    }
-}
