@@ -17,7 +17,6 @@
 // </copyright>
 
 using System.Collections.Generic;
-using System.Reflection;
 using OpenQA.Selenium;
 
 namespace SeleniumExtras.PageObjects
@@ -25,16 +24,16 @@ namespace SeleniumExtras.PageObjects
     /// <summary>
     /// Represents a base proxy class for objects used with the PageFactory.
     /// </summary>
-    public abstract class WebDriverObjectProxy : DispatchProxy
+    internal abstract class WebDriverObjectProxy
     {
         /// <summary>
-        /// Set search parameters
+        /// Create WebDriverObjectProxy
         /// </summary>
         /// <param name="locator">The <see cref="IElementLocator"/> implementation that
         /// determines how elements are located.</param>
         /// <param name="bys">The list of methods by which to search for the elements.</param>
         /// <param name="cache"><see langword="true"/> to cache the lookup to the element; otherwise, <see langword="false"/>.</param>
-        protected void SetSearchProperites(IElementLocator locator, IEnumerable<By> bys, bool cache)
+        protected WebDriverObjectProxy(IElementLocator locator, IEnumerable<By> bys, bool cache)
         {
             this.Locator = locator;
             this.Bys = bys;
@@ -44,16 +43,16 @@ namespace SeleniumExtras.PageObjects
         /// <summary>
         /// Gets the <see cref="IElementLocator"/> implementation that determines how elements are located.
         /// </summary>
-        protected IElementLocator Locator { get; private set; }
+        protected IElementLocator Locator { get; }
 
         /// <summary>
         /// Gets the list of methods by which to search for the elements.
         /// </summary>
-        protected IEnumerable<By> Bys { get; private set; }
+        protected IEnumerable<By> Bys { get; }
 
         /// <summary>
         /// Gets a value indicating whether element search results should be cached.
         /// </summary>
-        protected bool Cache { get; private set; }
+        protected bool Cache { get; }
     }
 }
