@@ -2,6 +2,7 @@
 + netstandard2.0 and net46 are the only supported frameworks now
 + Add support for IWrapsElement members creation (constructor with IWebElement parameter or WrappedElement setter required)
 + Exceptions from proxied elements are not wrapped in TargetInvocationException anymore
++ Remove DispatchProxy dependency
 
 3.12.1
 + Add constructor with parameters to FindsByAttibute 
